--- a/EnviTech/App.xaml
+++ b/EnviTech/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="EnviTech.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EnviTech"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:EnviTech">
     <Application.Resources>
          
     </Application.Resources>
