--- a/EnviTech/MainWindow.xaml
+++ b/EnviTech/MainWindow.xaml
@@ -34,5 +34,10 @@
                   ItemsSource="{Binding DateList}" 
                   SelectedItem="{Binding EndDate}" 
                   Height="40" Width="120"/>
+        <ComboBox Name="Operators" 
+                  Grid.Column="1" Grid.Row="1" 
+                  ItemsSource="{Binding DateList}" 
+                  SelectedItem="{Binding EndDate}" 
+                  Height="40" Width="120"/>
     </Grid>
 </Window>
