--- a/EnviTech/MainWindow.xaml
+++ b/EnviTech/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:EnviTech" 
         xmlns:viewmodel="clr-namespace:EnviTech.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -27,23 +27,46 @@
                     Height="25" Width="200"
                     Grid.Column="1" Grid.Row="0" 
                     DisplayDateStart="{Binding StartDate}" 
-                    DisplayDateEnd="{Binding EndDate}" 
-                    SelectedDate="{Binding PickedStartDate}"/>
+                    DisplayDateEnd="{Binding PickedEndDate, Mode=TwoWay}" 
+                    SelectedDate="{Binding PickedStartDate,Mode=TwoWay}"/>
         <Label Grid.Row="1" Height="40" MaxWidth="200" Content="Pick End Date" FontWeight="Bold" FontSize="20"/>
         <DatePicker x:Name="EndDatePicker" 
                     Grid.Column="1" Grid.Row="1"
                     Height="25" Width="200"
-                    DisplayDateStart="{Binding StartDate}" 
+                    DisplayDateStart="{Binding PickedStartDate, Mode=TwoWay}" 
                     DisplayDateEnd="{Binding EndDate}" 
-                    SelectedDate="{Binding PickedEndDate}"/>
-        
-        
-        
+                    SelectedDate="{Binding PickedEndDate, Mode=TwoWay}"/>
+
+        <Label Grid.Row="2" Height="40" MaxWidth="200" Content="Pick Tracking Value" FontWeight="Bold" FontSize="20"/>
+        <ComboBox Name="Values" 
+                  Grid.Column="1" Grid.Row="2" 
+                  ItemsSource="{Binding ValueList}" 
+                  SelectedItem="{Binding SelectedValue}" 
+                  Height="40" Width="120"/>
+
         <Label Grid.Row="3" Height="40" MaxWidth="200" Content="Operation" FontWeight="Bold" FontSize="20"/>
         <ComboBox Name="Operators" 
                   Grid.Column="1" Grid.Row="3" 
                   ItemsSource="{Binding OperatorList}" 
                   SelectedItem="{Binding Operator}" 
                   Height="40" Width="120"/>
+
+        <Label Grid.Row="4" Height="40" MaxWidth="200" Content="InsertValue" FontWeight="Bold" FontSize="20"/>
+        <TextBox Grid.Row="4" Grid.Column="1"
+                 Height="25" Width="125" 
+                 Text="{Binding InputValue}"/>
+        <Button Grid.Row="5"
+                HorizontalAlignment="Right"
+                Margin="10"
+                Content="Clear"
+                Height="25" Width="125"/>
+
+        <Button Grid.Row="5" Grid.Column="1"
+                HorizontalAlignment="Left"
+                Margin="10"
+                Content="Show"
+                Height="25" Width="125"/>
+
+
     </Grid>
 </Window>
