--- a/EnviTech/MainWindow.xaml
+++ b/EnviTech/MainWindow.xaml
@@ -55,12 +55,14 @@
         <TextBox Grid.Row="4" Grid.Column="1"
                  Height="25" Width="125" 
                  Text="{Binding InputValue}"/>
+        
         <Button Grid.Row="5"
                 HorizontalAlignment="Right"
                 Margin="10"
                 Content="Clear"
-                Height="25" Width="125"/>
-
+                Height="25" Width="125"
+                Command="{Binding ClearPageCommand}"/>
+        
         <Button Grid.Row="5" Grid.Column="1"
                 HorizontalAlignment="Left"
                 Margin="10"
