--- a/EnviTech/MainWindow.xaml
+++ b/EnviTech/MainWindow.xaml
@@ -41,14 +41,14 @@
         <ComboBox Name="Values" 
                   Grid.Column="1" Grid.Row="2" 
                   ItemsSource="{Binding ValueList}" 
-                  SelectedItem="{Binding SelectedValue}" 
+                  SelectedItem="{Binding SelectedValue, Mode=TwoWay}" 
                   Height="40" Width="120"/>
 
         <Label Grid.Row="3" Height="40" MaxWidth="200" Content="Operation" FontWeight="Bold" FontSize="20"/>
         <ComboBox Name="Operators" 
                   Grid.Column="1" Grid.Row="3" 
                   ItemsSource="{Binding OperatorList}" 
-                  SelectedItem="{Binding Operator}" 
+                  SelectedItem="{Binding Operator, Mode=TwoWay}" 
                   Height="40" Width="120"/>
 
         <Label Grid.Row="4" Height="40" MaxWidth="200" Content="InsertValue" FontWeight="Bold" FontSize="20"/>
@@ -67,7 +67,8 @@
                 HorizontalAlignment="Left"
                 Margin="10"
                 Content="Show"
-                Height="25" Width="125"/>
+                Height="25" Width="125"
+                Command="{Binding SubmitFormCommand}"/>
 
 
     </Grid>
